# WellDoubletControl

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  comparison.h  copy.bat  copy.sh  main.cpp  parameter.h  run_tests.sh  wdc_config.h.in  wellDoubletCalculation.cpp  wellDoubletCalculation.h  wellDoubletControl.cpp  wellDoubletControl.h
fakeSimulator/: CMakeLists.txt  fakeSimulator.cpp  fakeSimulator.h  parameter.h
gtest/: allTests.cpp  fakeSimulator.cpp  fakeSimulator.h  parameter.h  run_tests.sh  test_wellDoubletControl.cpp
src/: CMakeLists.txt  comparison.h  heatPump.cpp  heatPump.h  wellDoubletControl.cpp  wellDoubletControl.h  wellScheme_0.cpp  wellScheme_1.cpp  wellScheme_2.cpp
